:coffee: making changes to deploy

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "web-vitals": "^1.1.2",
     "webpack": "4.44.2"
   },
+  "devDependencies": {
+    "@types/socket.io-client": "^3.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
